# k210-guard-bootloader

./: .gitignore  CMakeLists.txt  README.md  flash_image.bat  mk_image.bat  mk_single.cmd
ld/: maixloader.ld
src/: .clang-format  crt.S  main.c
src/bsp/: ctype.c  entry.c  entry_user.c  interrupt.c  printf.c  sleep.c  strto.c  syscalls.c
src/cli/: cli.c  command.c  crc16.c  load.c
src/drivers/: aes.c  clint.c  flash.c  fpioa.c  gpiohs.c  otp.c  plic.c  sha256.c  spi.c  sysctl.c  timer.c  uarths.c  utils.c
src/freertos/: locks.c
src/include/: aes.h  cli.h  clint.h  common.h  ctype.h  dump.h  encoding.h  entry.h  flash.h  fpioa.h  gpio_common.h  gpiohs.h  interrupt.h  io.h  otp.h  platform.h  plic.h  printf.h  sha256.h  sleep.h  spi.h  syscalls.h  sysctl.h  syslog.h  timer.h  uarths.h  util.h  utils.h
utils/: adjhex.py  crc16  genimg.py  genimg_single.py  genimg_whole.py  kflash.py  memmixer.py  version_add.py  version_get.py  version_hw_get.py
